metadata/force-app/main/default/objects/CustomName_aHuEc__c/CustomName_aHuEc__c.object-meta.xml
<CustomObject>
    <description>Description_HPczY</description>
    <label>CustomLabel_ZpbSt</label>
    <nameField>
        <label>CustomLabel_ZpbSt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZpbSts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>