metadata/force-app/main/default/objects/CustomName_aHuEc__c/fields/CustomField_ZDtyq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ZDtyq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldexxEg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>